--- a/config/Almighty_AX6.config
+++ b/config/Almighty_AX6.config
@@ -1,6 +1,3 @@
-#
-# No change to .config
-#
 
 CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
@@ -78,7 +75,7 @@ CONFIG_PACKAGE_lua-maxminddb=y
 # CONFIG_PACKAGE_luci-app-advanced is not set
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 # CONFIG_PACKAGE_luci-app-argon-config is not set
-CONFIG_PACKAGE_luci-app-bypass=y
+# CONFIG_PACKAGE_luci-app-bypass is not set
 CONFIG_PACKAGE_luci-app-dnsfilter=y
 # CONFIG_PACKAGE_luci-app-eqos is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
