--- a/.github/workflows/5.15_DEV_AX9000.yml
+++ b/.github/workflows/5.15_DEV_AX9000.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: 5.15_DEV_AX9000
+name: 5.15_AX9000
 
 on:
   repository_dispatch:
