--- a/.github/workflows/5.15_AX9000.yml
+++ b/.github/workflows/5.15_AX9000.yml
@@ -176,6 +176,7 @@ jobs:
           4、驱动：默认NSS加速和sfe加速
           此版本是全能版本，也是自定义版本，涵盖所有插件，想要榨干路由器性能和内存的朋友可以尝试刷入.
           支持已刷WEB升级的openwrt固件，刷入方式：首选恢复出厂设置，然后再系统升级不保留配置刷入.
+          2022-3-8更新配置文件,新增小米IPQ807X全系列最新内核5.15，删除冲突及多余的插件.
           全能版每天都会拉取最新源码更新.
           默认IP： 10.0.0.1 默认密码： password
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/robimarko/openwrt)更新记录】
