--- a/.github/workflows/5.15_AX9000.yml
+++ b/.github/workflows/5.15_AX9000.yml
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/robimarko/openwrt
   REPO_BRANCH: ipq807x-5.15
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AX9000-5.15.config
+  CONFIG_FILE: config/AX9000_5.15.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
