--- a/.github/workflows/5.15_AX6.yml
+++ b/.github/workflows/5.15_AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: AX6
+name: 5.15_AX6
 
 on:
   repository_dispatch:
@@ -30,8 +30,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/Boos4721/openwrt
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/robimarko/openwrt
+  REPO_BRANCH: ipq807x-5.15
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6_5.15.config
   DIY_P1_SH: diy-part1.sh
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: AX6
-  PRODUCT_NAME: AX6
+  FILE_NAME: 5.15_AX6
+  PRODUCT_NAME: 5.15_AX6
 
 jobs:
   build:
