--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -1,11 +1,11 @@
 
 #============================================================
-# Copyright (c) 2019-2021 iplcdn <https://iplcdn.com>
+# Copyright (c) 2019-2021 iplcdn <https://nomcai.ml>
 #
 # This is free software, licensed under the MIT License.
 # See /LICENSE for more information.
 #
-# https://github.com/joyblablabla/Actions-OpenWrt
+# https://github.com/joecaicai/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
 #
 # File: .github/workflows/update-checker.yml
@@ -13,11 +13,14 @@
 #============================================================
 
 name: Remove old artifacts
-
+env:
+  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_BRANCH: master
+  
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 20 * * fri
+    - cron: 0 */18 * * *
   #  每天晚上 22 点自动编译。
   #  watch:
   #    types: started
@@ -39,7 +42,31 @@ jobs:
          #Optional inputs
          #skip-tags: true
          #skip-recent: 5
-         
+    - name: Get Commit Hash
+      id: getHash
+      run: |
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
+        echo "::set-output name=commitHash::$(git rev-parse HEAD)"
+
+    - name: Compare Commit Hash
+      id: cacheHash
+      uses: actions/cache@v2
+      with:
+        path: .commitHash
+        key: HEAD-${{ steps.getHash.outputs.commitHash }}
+
+    - name: Save New Commit Hash
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      run: |
+        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
+
+    - name: Trigger build
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      uses: peter-evans/repository-dispatch@v1
+      with:
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        event-type: Source Code Update
+        
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
