--- a/.github/workflows/5.15-AX3600.yml
+++ b/.github/workflows/5.15-AX3600.yml
@@ -30,8 +30,10 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/robimarko/openwrt
-  REPO_BRANCH: ipq807x-5.15
+  #REPO_URL: https://github.com/robimarko/openwrt
+  #REPO_BRANCH: ipq807x-5.15
+  REPO_URL: https://github.com/Boos4721/openwrt
+  REPO_BRANCH: master  
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX3600-5.15.config
   DIY_P1_SH: diy-part1.sh
