--- a/.github/workflows/5.15-AX6.yml
+++ b/.github/workflows/5.15-AX6.yml
@@ -34,7 +34,7 @@ env:
   REPO_BRANCH: ipq807x-5.15
   #REPO_URL: https://github.com/Boos4721/openwrt
   #REPO_URL: https://github.com/coolsnowwolf/lede  
-  REPO_BRANCH: master  
+  #REPO_BRANCH: master  
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6-5.15.config
   DIY_P1_SH: diy-part1.sh
