--- a/.github/workflows/Almighty-AX9000.yml
+++ b/.github/workflows/Almighty-AX9000.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: Almighty_AX9000
+name: Almighty-AX9000
 
 on:
   repository_dispatch:
@@ -45,8 +45,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: Almighty_AX9000
-  PRODUCT_NAME: Almighty_AX9000
+  FILE_NAME: Almighty-AX9000
+  PRODUCT_NAME: Almighty-AX9000
 
 jobs:
   build:
