--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: X86-64-immortalwrt-5.4
+name: X86-64
 
 on:
   repository_dispatch:
@@ -30,9 +30,9 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: openwrt-18.06-k5.4
-  #REPO_URL: https://github.com/coolsnowwolf/lede
+  #REPO_URL: https://github.com/immortalwrt/immortalwrt
+  #REPO_BRANCH: openwrt-18.06-k5.4
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86_64/x86_64.config
@@ -211,8 +211,8 @@ jobs:
           2、发行版中只提供完整的固件
           3、需要单独IPK请到分支下载
           默认IP： 10.0.0.1 默认密码： password
-          新增天灵源码immortalwrt-5.4内核docker版本，不带docker是精简版，相比lean的源码更稳定，更丝滑！更急速！
-          docker版分区1024。精简版分区300，diy2是添加lede软件库没有的插件。及一些原作者的插件。
+          #新增天灵源码immortalwrt-5.4内核docker版本，不带docker是精简版，相比lean的源码更稳定，更丝滑！更急速！
+          #docker版分区1024。精简版分区300，diy2是添加lede软件库没有的插件。及一些原作者的插件。
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/immortalwrt/immortalwrt)更新记录】
           ${{ env.useVersionInfo }}
         artifacts: ${{ env.FIRMWARE }}/*
