--- a/.github/workflows/Almighty-AX6.yml
+++ b/.github/workflows/Almighty-AX6.yml
@@ -117,7 +117,7 @@ jobs:
       run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
-      run: cd openwrt && ./scripts/feeds install -a -f
+      run: cd openwrt && ./scripts/feeds install -a
       
     - name: Load custom configuration
       run: |
