--- a/.github/workflows/Almighty-AX6.yml
+++ b/.github/workflows/Almighty-AX6.yml
@@ -30,7 +30,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/Boos4721/openwrt
+ #REPO_URL: https://github.com/Boos4721/openwrt
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master  
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6.config
